--- a/src/data/seasonData.json
+++ b/src/data/seasonData.json
@@ -1,3 +1,83 @@
 {
-    
+    "data": [
+{
+   "title": "2000-01",
+   "value": "2000-2001" 
+},
+{
+    "title": "2001-02",
+    "value": "2001-2002" 
+ },
+ {
+    "title": "2002-03",
+    "value": "2002-2003" 
+ },
+ {
+     "title": "2003-04",
+     "value": "2003-2004" 
+  },{
+    "title": "2004-05",
+    "value": "2004-2005" 
+ },
+ {
+     "title": "2005-06",
+     "value": "2005-2006" 
+  },
+  {
+     "title": "2006-07",
+     "value": "2006-2007" 
+  },
+  {
+      "title": "2007-08",
+      "value": "2007-2008" 
+   },{
+    "title": "2008-09",
+    "value": "2008-2009" 
+ },
+ {
+     "title": "2009-10",
+     "value": "2009-2010" 
+  },
+  {
+     "title": "2010-11",
+     "value": "2010-2011" 
+  },
+  {
+      "title": "2011-12",
+      "value": "2011-2012" 
+   },{
+     "title": "2012-13",
+     "value": "2012-2013" 
+  },
+  {
+      "title": "2013-14",
+      "value": "2013-2014" 
+   },
+   {
+      "title": "2014-15",
+      "value": "2014-2015" 
+   },
+   {
+       "title": "2015-16",
+       "value": "2015-2016" 
+    },{
+        "title": "2016-17",
+        "value": "2016-2017" 
+     },
+     {
+         "title": "2017-18",
+         "value": "2017-2018" 
+      },{
+        "title": "2018-19",
+        "value": "2018-2019" 
+     },
+     {
+         "title": "2019-20",
+         "value": "2019-2020" 
+      },
+      {
+         "title": "2020-21",
+         "value": "2020-2021" 
+      }
+]
 }
